# simu_logic

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fonctions.h  functions-eval.c  functions-helper.c  functions-in-out.c  functions-prototypes.h  functions-rearrange-circuit.c  functions.c  functions.h  main.c  old_functions.c  structures.h
include/: macros.h  prototypes.h  structures.h
src/: functions-circuits.c  functions-commands.c  functions-components.c  functions-console-output.c  functions-eval.c  functions-helper.c  functions-in-out.c  functions-links.c  functions-models.c  functions-rearrange-circuit.c  functions-run-loop.c  functions.c  main.c  prototypes.h  structures.h
src/commands/: commands-circuit.c  commands-component.c  commands-link.c  commands-list.c  commands.c
src/core/: functions-circuits.c  functions-components.c  functions-console-output.c  functions-eval.c  functions-helper.c  functions-in-out.c  functions-links.c  functions-models.c  functions-rearrange-circuit.c  functions-run-loop.c  main.c
templates/: circuit-rgb.txt  circuit-xor.txt  circuit_xor_gate.c  modele_simu_logic.txt  modele_simu_logic_3.txt  test.txt
templates library/: circuit_xor_gate.c  how to use the templates ?.txt
